--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
   "name": "ming-ui",
   "version": "0.1.0",
+  "description": "vue self components ui",
+  "author": "xiuming.wang",
+  "keywords": [
+    "vue-ui",
+    "components",
+    "31huiyi"
+  ],
+  "license": "MIT",
   "private": false,
   "main": "dist/ming-ui.umd.min.js",
   "scripts": {
